[KYLIN-4970]  fix spark.executor.extraJavaOptions args in SparkExecutable.