@@ -77,6 +77,8 @@ public class SparkExecutable extends AbstractExecutable {
     private static final String COUNTER_SAVE_AS = "CounterSaveAs";
     private static final String CONFIG_NAME = "configName";
 
+    private static final String EXECUTOR_JVM_ARG = "spark.executor.extraJavaOptions";
+
     public void setClassName(String className) {
         this.setParam(CLASS_NAME, className);
     }
@@ -289,8 +291,15 @@ public class SparkExecutable extends AbstractExecutable {
             }
 
             for (Map.Entry<String, String> entry : sparkConfs.entrySet()) {
-                stringBuilder.append(" --conf ").append(entry.getKey()).append("=").append(entry.getValue())
-                        .append(" ");
+                //"spark.executor.extraJavaOptions=-XX:+PrintGCDetails -XX:+PrintGCTimeStamps" need surround with "".
+                if (entry.getKey().equals(EXECUTOR_JVM_ARG)) {
+                    stringBuilder.append(" --conf ").append("\"").append(entry.getKey()).append("=")
+                            .append(entry.getValue()).append("\"").append(" ");
+                    logger.info("use spark.executor.extraJavaOptions: " + stringBuilder.toString());
+                } else {
+                    stringBuilder.append(" --conf ").append(entry.getKey()).append("=").append(entry.getValue())
+                            .append(" ");
+                }
             }
 
             stringBuilder.append("--jars %s %s %s");
